[gd_scene load_steps=8 format=3 uid="uid://mlhgidq1ow1b"]

[ext_resource type="Script" path="res://Scripts/don't wake her up.gd" id="1_jhs1t"]
[ext_resource type="PackedScene" uid="uid://cwkx4xqfoj1tr" path="res://Scenes/window_obs.tscn" id="3_ecayh"]
[ext_resource type="Texture2D" uid="uid://con40ybx8212b" path="res://Assets/Images/Background/plansza_SKETCH.png" id="3_hjj7f"]
[ext_resource type="PackedScene" path="res://Scenes/boogeyman_obs.tscn" id="4_yshmp"]
[ext_resource type="PackedScene" path="res://Scenes/cat_obs.tscn" id="5_tt8u4"]
[ext_resource type="PackedScene" path="res://Scenes/clock_obs.tscn" id="6_mof2p"]
[ext_resource type="PackedScene" uid="uid://cy6wom821tjvy" path="res://Scenes/dog_obs.tscn" id="7_qgjty"]

[node name="Game" type="Node2D"]
script = ExtResource("1_jhs1t")

[node name="PlanszaSketch" type="Sprite2D" parent="."]
texture = ExtResource("3_hjj7f")
centered = false

[node name="Test_Clock" type="Label" parent="."]
offset_left = 41.0
offset_top = 1027.0
offset_right = 282.0
offset_bottom = 1053.0
text = "Test"

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0

[node name="EventTimer" type="Timer" parent="."]

[node name="Window" parent="." instance=ExtResource("3_ecayh")]
position = Vector2(1556, 170)
scale = Vector2(2.28, 2.28)

[node name="Boogeyman" parent="." instance=ExtResource("4_yshmp")]
position = Vector2(1006, 730)

[node name="Cat" parent="." instance=ExtResource("5_tt8u4")]
position = Vector2(661, 650)

[node name="Clock" parent="." instance=ExtResource("6_mof2p")]
position = Vector2(845, 383)

[node name="Dog" parent="." instance=ExtResource("7_qgjty")]
position = Vector2(1091, 768)

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="EventTimer" to="." method="_on_event_timer_timeout"]
